# sgwta_repo

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md
.devcontainer/: devcontainer.json  post_create_command.sh  requirements.txt
.github/: config.yml
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: github-actions-practice_items_bazel_test.yaml
AtCoder/: README.md
docker/: Dockerfile
environment_settings/: install_docker.sh
for_JQ/genCsvReaderEvalEnv/: genCsvReaderEvalEnvSettings.py
for_JQ/genCsvReaderEvalEnv/input/: TcInOpenCanGlConvFotMzd.component_public.yaml
practice_items/DeepLearning/oreilly_1/: README.md
practice_items/GitHub_Actions/: README.md
practice_items/bazel_gtest/: README.md  WORKSPACE
practice_items/bazel_gtest/cpp_bazel_gtest.proj/: BUILD.bazel
practice_items/bazel_gtest/cpp_bazel_gtest.proj/src/calc_add/: BUILD.bazel  calc_add.cpp  calc_add.hpp
practice_items/bazel_gtest/cpp_bazel_gtest.proj/test/: BUILD.bazel  test.cpp
practice_items/c++/base/: README.md
practice_items/c++/class_step1/: README.md  sample.cpp  sample.h
practice_items/c++_class/step1/: README.md  main.cpp
practice_items/cpp_bazel_test/src/: BUILD.bazel  main.cpp  main.hpp
practice_items/hello_world/: bazel-bin  bazel-hello_world  bazel-out  bazel-testlogs
practice_items/molecules_3D/: CHANGELOG.md  README.md  draw_cylinder_and_spheres.py  draw_molecular_structure.py
practice_items/shell_command/: TEXTBOOK.md
practice_items/tetris_py/: README.md  tetris.py
practice_items/tic-tac-toe/: tic-tac-toe.py
practice_items/tqdm_progressBar/: SupplementaryInformation.md  main.py
practice_items/yaml_python/: SupplementaryInformation.md  main.py
sample/enchant_js_game_templete/: README.md  game.html  index.html  script.js
(+66 files in other folders)
